aws/test/k8s-apps-deployment/k8s-spec-result/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      env:
      - name: DATABASE_URL
        valueFrom:
          secretKeyRef:
            name: db-credentials
            key: DATABASE_URL
      - image: docker.io/hutinskit/result
        name: result
        ports:
        - containerPort: 4000
          name: result
