aws/test/k8s-apps-deployment/k8s-spec-result/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-test-ingress
  namespace: vote
  labels:
    app: result
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/group.name: "riftdevops"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:067614922676:certificate/2a71b0e8-ca1f-411b-82c8-3c10aa23b9d5"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # Optional but recommended
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
  - host: "result-test.riftdevops.com"  
    http:
      paths:
      - pathType: Prefix
        path: /      
        backend:
          service: 
            name: result
            port:
              number: 5001
